--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
 		<link rel="stylesheet" href="">
 	</head>
 	<body>
-		<div ng-app="app">
-			<div ng-view>
+		<div class="container">
+			<div ng-app="app">
+				<div ng-view>
 
+				</div>
 			</div>
 		</div>
 
