--- a/index.html
+++ b/index.html
@@ -16,19 +16,19 @@
 		</div>
 
 
-		<script src="public/lib/angular-route/angular-route.min.js"></script>
-		<script src="public/lib/angular/angular.min.js"></script>
-		<script src="public/lib/bootstrap/dist/js/bootstrap.min.js"></script>
-		<script src="public/lib/firebase/firebase.js"></script>
+		<script src="lib/angular-route/angular-route.min.js"></script>
+		<script src="lib/angular/angular.min.js"></script>
+		<script src="lib/bootstrap/dist/js/bootstrap.min.js"></script>
+		<script src="lib/firebase/firebase.js"></script>
 		<script src="main.js"></script>
-		<script src="public/login/login.config.js"></script>
-		<script src="public/login/login.factory.js"></script>
-		<script src="public/login/login.ctrl.js"></script>
-		<script src="public/boards/boards.config.js"></script>
-		<script src="public/boards/boards.factory.js"></script>
-		<script src="public/boards/boards.ctrl.js"></script>
-		<script src="public/pins/pin.config.js"></script>
-		<script src="public/pins/pin.factory.js"></script>
-		<script src="public/pins/pin.ctrl.js"></script>
+		<script src="login/login.config.js"></script>
+		<script src="login/login.factory.js"></script>
+		<script src="login/login.ctrl.js"></script>
+		<script src="boards/boards.config.js"></script>
+		<script src="boards/boards.factory.js"></script>
+		<script src="boards/boards.ctrl.js"></script>
+		<!-- <script src="pins/pin.config.js"></script> -->
+		<!-- <script src="pins/pin.factory.js"></script> -->
+		<!-- <script src="pins/pin.ctrl.js"></script> -->
 	</body>
 </html>
