--- a/public/login/login.html
+++ b/public/login/login.html
@@ -6,24 +6,26 @@
 <form>
 	<h3>Sign In or Sign Up!</h3>
 	<div class="form-group">
-		<label for="name">Name:</label>
-		<input
-			class="form-control"
-			type="text"
-			name="name"
-			placeholder="Robert Plant">
-	</div>
-	<div class="form-group">
 		<label for="email">Email:</label>
 		<input
 			class="form-control"
 			type="email"
 			name="email"
+			ng-model="userEmail"
 			placeholder="robert@plant.com">
 	</div>
+	<div class="form-group">
+		<label for="password">Password:</label>
+		<input
+			class="form-control"
+			type="password"
+			name="password"
+			ng-model="userPassword"
+			placeholder="************">
+	</div>
 	<div>
-		<button class="btn btn-success" type="button" ng-click="login.login()">Log In</button>
-		<button class="btn btn-warning" type="button" ng-click="login.register()">Register</button>
+		<button class="btn btn-success" type="button" ng-click="login.login(userEmail, userPassword)">Log In</button>
+		<button class="btn btn-warning" type="button" ng-click="login.register(userEmail, userPassword)">Register</button>
 	</div>
 
 </form>
