add board files. JSON working in console

--- a/public/boards/boards.html
+++ b/public/boards/boards.html
@@ -11,7 +11,7 @@
 <h1>All the boards</h1>
 
     <div class="container">
-        <div ui-sortable ng-model=''>
+        <div ui-sortable ng-model='model'>
         </div>
     </div>
 </body>
