--- a/public/index.html
+++ b/public/index.html
@@ -28,8 +28,8 @@
         <script src="boards/boards.config.js"></script>
         <script src="boards/boards.factory.js"></script>
         <script src="boards/boards.ctrl.js"></script>
-        <!-- <script src="pins/pin.config.js"></script> -->
-        <!-- <script src="pins/pin.factory.js"></script> -->
-        <!-- <script src="pins/pin.ctrl.js"></script> -->
+        <script src="pins/pin.config.js"></script>
+        <script src="pins/pin.factory.js"></script>
+        <script src="pins/pin.ctrl.js"></script>
     </body>
 </html>
