--- a/public/pins/pin.html
+++ b/public/pins/pin.html
@@ -1,4 +1,4 @@
-<section ng-controller="PinsCtrl">
+<section>
   <h1 ng-model="userTest">Test</h1>
-  <h2>Further Test</h2>
+  <h2>{{userTest}}</h2>
 </section>
