redirect to boards page after login or register

--- a/public/login/login.html
+++ b/public/login/login.html
@@ -24,8 +24,8 @@
 			placeholder="************">
 	</div>
 	<div>
-		<button class="btn btn-success" type="button" ng-click="login.login(userEmail, userPassword)">Log In</button>
-		<button class="btn btn-warning" type="button" ng-click="login.register(userEmail, userPassword)">Register</button>
+		<button class="btn btn-success" type="button" ng-click="login.loginUser(userEmail, userPassword)">Log In</button>
+		<button class="btn btn-warning" type="button" ng-click="login.registerUser(userEmail, userPassword)">Register</button>
 	</div>
 
 </form>
