--- a/public/pins/pin.html
+++ b/public/pins/pin.html
@@ -1,3 +1,22 @@
+<div class="boardsWrapper">
+<nav class="navbar navbar-fixed-top navbar-inverse">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="#">Boardtrist</a>
+    </div>
+    <ul class="nav navbar-nav">
+      <li><a href="#">Boards</a></li>
+      <li class="active"><a href="#">Pins</a></li>
+    </ul>
+    <ul class="nav navbar-nav navbar-right">
+
+      <li><a href="#"><span class="navbar-text"></span>Signed in as joe@abc.com</a></li>
+      <!-- <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li> -->
+      <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Logout</a></li>
+    </ul>
+  </div>
+</nav>
+
 <section>
   <h1 ng-model="userTest">Test</h1>
   <h2>{{userTest}}</h2>
