--- a/public/boards/user-board.html
+++ b/public/boards/user-board.html
@@ -1,17 +1,24 @@
-<!DOCTYPE html>
-<html>
-
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
-    <title>BOARDS !!!</title>
-</head>
-
-<body>
-    <div class="container">
-        <div ui-sortable ng-model='model'>
-        </div>
+<div class="boardsWrapper">
+<nav class="navbar navbar-fixed-top navbar-inverse">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="#">Boardtrist</a>
     </div>
-</body>
+    <ul class="nav navbar-nav">
+      <li class="active"><a href="#">Boards</a></li>
+      <li><a href="#">Pins</a></li>
+    </ul>
+    <ul class="nav navbar-nav navbar-right">
 
-</html>
+      <li><a href="#"><span class="navbar-text"></span>Signed in as joe@abc.com</a></li>
+      <!-- <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li> -->
+      <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Logout</a></li>
+    </ul>
+  </div>
+</nav>
+
+
+<div class="container">
+    <div ui-sortable ng-model='model'>
+    </div>
+</div>
