--- a/public/boards/boards.html
+++ b/public/boards/boards.html
@@ -13,7 +13,7 @@
 
       <li><a href="#"><span class="navbar-text"></span>Signed in as joe@abc.com</a></li>
       <!-- <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li> -->
-      <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Logout</a></li>
+      <li ng-click="logout()"><a><span class="glyphicon glyphicon-log-in"></span> Logout</a></li>
     </ul>
   </div>
 </nav>
