--- a/public/pins/addPin.html
+++ b/public/pins/addPin.html
@@ -1,3 +1,3 @@
-<input type="text" placeholder="URL">
-<input type="text" placeholder="Title">
-<input class="addPinButton" type="button" value="Add Pin" ng-click=""></input>
+<input type="text" placeholder="URL" ng-model="addNewPin.url">
+<input type="text" placeholder="Title" ng-model="addNewPin.title">
+<button class="addPinButton" type="button" ng-click="addNewPin.addPin()">Add Pin</button>
