--- a/public/boards/boards.html
+++ b/public/boards/boards.html
@@ -3,7 +3,7 @@
 <nav class="navbar navbar-fixed-top navbar-inverse">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand" href="#">Boardtrist</a>
+      <a class="navbar-brand" href="#">Boardtriste</a>
     </div>
     <ul class="nav navbar-nav">
       <li class="active"><a href="#">Boards</a></li>
@@ -19,8 +19,9 @@
 </nav>
 
 <h1>All the boards</h1>
+<h4 ng-click="boards.goToUserBoard()">Show User Boards</h4>
 <div ng-repeat="(key, board) in boards.boardsList">
-  <p>{{board.boardTitle}}</p>
+  <p ng-click="boards.showBoardPins(key)">{{board.boardTitle}}</p>
   <!-- <p>{{board.url}}</p> -->
 </div>
 
