--- a/public/pins/pin.html
+++ b/public/pins/pin.html
@@ -2,7 +2,7 @@
 <nav class="navbar navbar-fixed-top navbar-inverse">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand" href="#">Boardtrist</a>
+      <a class="navbar-brand" href="#">Boardtriste</a>
     </div>
     <ul class="nav navbar-nav">
       <li><a href="#">Boards</a></li>
