--- a/public/boards/user-board.html
+++ b/public/boards/user-board.html
@@ -10,7 +10,7 @@
     </ul>
     <ul class="nav navbar-nav navbar-right">
 
-      <li><a href="#"><span class="navbar-text"></span>Signed in as joe@abc.com</a></li>
+      <li><a href="#"><span class="navbar-text"></span>Signed in as pat@rick.com</a></li>
       <!-- <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li> -->
       <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Logout</a></li>
     </ul>
